kubeconfigfile/app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lucidity
  labels: 
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: lucidity
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: malli183/helloworld:v1.0
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
