kubeconfigfile/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: lucidity
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
