kubeconfigfile/istio-ingress.yml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-system

spec:

  selector:
    istio: ingress

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: platform-routes
  namespace: istio-system

spec:

  hosts:
  - "*"

  gateways:
  - platform-gateway

  http:

  - match:
      - uri:
          prefix: /hello

    rewrite:
      uri: /

    route:
      - destination:
          host: myapp.lucidity.svc.cluster.local

          port:
            number: 80
